hphp/test/zend/good/Zend/tests/traits/language010.php.expectf

Fatal error: Method 'world' declared in multiple traits in %s/language010.php on line 17
